@@ -11,6 +11,7 @@ Core - General
   - $config->smart_uploads_url() is no longer used, and outputs deprecated messages to log.
   - $config->smart_image_uploads_url() is no longer used, and outputs deprecated messages to log.
   - new define in cms_config class CMS_UPLOADS_URL
+  - Remove GUI functionality for managing UDT's (udt's will be replaced by simple_plugins)
 
 CMSContentManager - remember to bump version
   - Gets rid of secure options, flag output and bulk functionaltiy
